@@ -7,10 +7,7 @@ group = "org.example"
 version = "unspecified"
 
 repositories {
-//    maven ("https://jitpack.io")
     mavenCentral()
-//    jcenter()
-//    maven("https://www.beatunes.com/repo/maven2/")
 }
 
 dependencies {
@@ -27,17 +24,21 @@ dependencies {
 
     implementation("org.apache.logging.log4j:log4j-api:2.25.3")
     implementation("org.apache.logging.log4j:log4j-core:2.25.3")
-    implementation("org.apache.logging.log4j:log4j-slf4j-impl:2.25.3")
+    implementation("org.apache.logging.log4j:log4j-slf4j2-impl:2.25.3")
 
     implementation("javazoom:jlayer:1.0.1")
-    implementation(files(layout.projectDirectory.file("libs/jflac-codec-1.3.6.jar"))) // 远古库劝你老实
+    implementation(files(layout.projectDirectory.file("libs/jflac-codec-1.3.6.jar")))
     implementation("net.jthink:jaudiotagger:3.0.1")
     implementation("com.alibaba.fastjson2:fastjson2:2.0.61")
-    implementation("com.squareup.okhttp3:okhttp:5.3.2")
+    implementation("org.xerial:sqlite-jdbc:3.51.3.0")
 }
 
 tasks.test {
     useJUnitPlatform()
+
+    jvmArgs(
+        "--enable-native-access=ALL-UNNAMED"
+    )
 }
 kotlin {
     jvmToolchain(21)
